.kubernetes/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-spring
spec:
#  type: NodePort
  type: LoadBalancer
  selector:
    app: backend-spring
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
#      nodePort: 30002

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-spring
spec:
  selector:
    matchLabels:
      app: backend-spring
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-spring
    spec:
      containers:
        - name: backend-spring
          image: cursedbirb/hiragana_backend:latest
          ports:
            - containerPort: 8080
