.kubernetes/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-react
spec:
  type: ClusterIP
  selector:
    app: frontend-react
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
#  externalIPs:
#    - 192.168.1.116
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-react
spec:
  selector:
    matchLabels:
      app: frontend-react
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend-react
    spec:
      containers:
        - name: frontend-react
          image: cursedbirb/hiragana_frontend:latest
          ports:
            - containerPort: 3000
